--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/bundle/dbext"]
 	path = vim/bundle/dbext
 	url = https://github.com/vim-scripts/dbext.vim.git
+[submodule "vim/bundle/slime"]
+	path = vim/bundle/slime
+	url = https://github.com/jpalardy/vim-slime.git
