--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,12 @@
 [submodule "vim/bundle/slime"]
 	path = vim/bundle/slime
 	url = https://github.com/jpalardy/vim-slime.git
+[submodule "vim/bundle/wombat256"]
+	path = vim/bundle/wombat256
+	url = https://github.com/vim-scripts/wombat256.vim.git
+[submodule "vim/bundle/jellybeans"]
+	path = vim/bundle/jellybeans
+	url = https://github.com/nanotech/jellybeans.vim.git
+[submodule "vim/bundle/bufexplorer"]
+	path = vim/bundle/bufexplorer
+	url = git://github.com/vim-scripts/bufexplorer.zip.git
