--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
 	url = git://github.com/majutsushi/tagbar.git
+[submodule "vim/bundle/haskell-fold"]
+	path = vim/bundle/haskell-fold
+	url = git://github.com/Twinside/vim-haskellFold.git
