Use vundle instead of pathogen for plugins
Managing submodules is nice, but has overhead and various annoyances
(such as change noise from generated doc tags). Use vundle which
basically does the same thing, but without using submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,57 +1,3 @@
-[submodule "vim/bundle/tabular"]
-	path = vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
-[submodule "vim/bundle/snipmate"]
-	path = vim/bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
-[submodule "vim/bundle/nerdtree"]
-	path = vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
-[submodule "vim/bundle/surround"]
-	path = vim/bundle/surround
-	url = https://github.com/tpope/vim-surround.git
-[submodule "vim/bundle/repeat"]
-	path = vim/bundle/repeat
-	url = https://github.com/tpope/vim-repeat.git
-[submodule "vim/bundle/perlomni"]
-	path = vim/bundle/perlomni
-	url = https://github.com/c9s/perlomni.vim.git
-[submodule "vim/bundle/nerdcommenter"]
-	path = vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
-[submodule "vim/bundle/perl"]
-	path = vim/bundle/perl
-	url = https://github.com/petdance/vim-perl.git
-[submodule "vim/bundle/matchit"]
-	path = vim/bundle/matchit
-	url = https://github.com/tsaleh/vim-matchit.git
-[submodule "vim/bundle/inkpot"]
-	path = vim/bundle/inkpot
-	url = https://github.com/ciaranm/inkpot.git
-[submodule "vim/bundle/slime"]
-	path = vim/bundle/slime
-	url = https://github.com/jpalardy/vim-slime.git
-[submodule "vim/bundle/wombat256"]
-	path = vim/bundle/wombat256
-	url = https://github.com/vim-scripts/wombat256.vim.git
-[submodule "vim/bundle/jellybeans"]
-	path = vim/bundle/jellybeans
-	url = https://github.com/nanotech/jellybeans.vim.git
-[submodule "vim/bundle/bufexplorer"]
-	path = vim/bundle/bufexplorer
-	url = https://github.com/vim-scripts/bufexplorer.zip
-[submodule "vim/bundle/clang_complete"]
-	path = vim/bundle/clang_complete
-	url = https://github.com/Rip-Rip/clang_complete.git
-[submodule "vim/bundle/tagbar"]
-	path = vim/bundle/tagbar
-	url = git://github.com/majutsushi/tagbar.git
-[submodule "vim/bundle/haskell-fold"]
-	path = vim/bundle/haskell-fold
-	url = git://github.com/Twinside/vim-haskellFold.git
-[submodule "vim/bundle/syntastic"]
-	path = vim/bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
-[submodule "vim/bundle/puppet"]
-	path = vim/bundle/puppet
-	url = https://github.com/rodjek/vim-puppet.git
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
