Add gaps to windows
Requires i3-gaps

--- a/i3/config
+++ b/i3/config
@@ -104,3 +104,9 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+### Gaps
+for_window [class="^.*"] border pixel 2
+gaps inner 10
+gaps outer 10
+
