Update DE colour scheme to Afterglow
    http://yabatadesign.github.io/afterglow-theme/

--- a/i3/config
+++ b/i3/config
@@ -111,27 +111,27 @@ gaps inner 10
 gaps outer 10
 
 ### Theme
-set $fg #ebdbb2
-set $bg #282828
-set $black #282828
-set $dark_grey #928374
-set $dark_red #cc241d
-set $red #fb4934
-set $dark_green #98971a
-set $green #b8bb26
-set $dark_yellow #d79921
-set $yellow #fabd2f
-set $dark_blue #458588
-set $blue #83a598
-set $dark_magenta #b16286
-set $magenta #d3869b
-set $dark_cyan #689d6a
-set $cyan #8ec07c
-set $grey #a89984
-set $light_grey #ebdbb2
+set $fg #d0d0d0
+set $bg #202020
+set $black #151515
+set $dark_grey #505050
+set $dark_red #ac4142
+set $red #ac4142
+set $dark_green #7e8d50
+set $green #7e8d50
+set $dark_yellow #e5b567
+set $yellow #e5b566
+set $dark_blue #6c99ba
+set $blue #6c99bb
+set $dark_magenta #9e4e85
+set $magenta #9e4e85
+set $dark_cyan #7dd5cf
+set $cyan #7dd5cf
+set $grey #d0d0d0
+set $light_grey #f5f5f5
 
 # class                 border       background   text         indicator    child_border
-client.focused          $light_grey  $black       $fg          $light_grey  $grey
+client.focused          $dark_yellow $black       $fg          $dark_red    $dark_yellow
 client.focused_inactive $dark_grey   $black       $grey        $dark_grey   $dark_grey
 client.unfocused        $black       $black       $grey        $dark_grey   $black
 client.urgent           $red         $dark_red    $fg          $red         $red
