--- a/polybar/config
+++ b/polybar/config
@@ -7,11 +7,9 @@ module-margin = 3
 background = #202020
 foreground = #d0d0d0
 
-font-0 = "Comfortaa:size=10;3"
-font-1 = "Roboto:size=10;2"
-font-2 = "Inconsolata:size=10;2"
-font-3 = FontAwesome:pixelsize=6;2
-
+font-0 = "Roboto:size=10;2"
+font-1 = "Ioveska:size=10;2"
+font-2 = "FontAwesome:pixelsize=6;2"
 
 tray-position = right
 tray-maxsize = 14
