--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Arc
-gtk-font-name=Cantarell 11
+gtk-font-name=Merriweather 12
 gtk-cursor-theme-name=Vanilla-DMZ
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
