--- a/polybar/config
+++ b/polybar/config
@@ -8,7 +8,7 @@ background = #202020
 foreground = #d0d0d0
 
 font-0 = "Roboto:size=10;2"
-font-1 = "Ioveska:size=10;2"
+font-1 = "Iosevka:size=10;2"
 font-2 = "FontAwesome:pixelsize=6;2"
 
 tray-position = right
