--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -4,7 +4,12 @@ log_file           "~/.config/mpd/log"
 
 # Optional
 music_directory    "~/Music"
-playlist_directory "~/.config/mpd/playlists"
+#playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
 state_file         "~/.config/mpd/state"
 sticker_file       "~/.config/mpd/sticker.sql"
+
+audio_output {
+	type            "pulse"
+	name            "pulse audio"
+}
