--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set -g prefix 'C-\'
 set -g mouse on
 set -g default-terminal "screen-256color"
+set -g escape-time 20
 
 # Key bindings
 bind r source-file ~/.tmux.conf
