vim: Configure Go LSP for coc

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -8,6 +8,12 @@
 			"requireRootPattern": true,
 			"settings": {},
 			"rootPatterns": [".flowconfig"]
+		},
+		"golang": {
+			"command": "gopls",
+			"args": ["serve"],
+			"filetypes": ["go"],
+			"initializationOptions": {}
 		}
 	}
 }
