--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+	"coc.preferences.diagnostic.displayByAle": true,
 	"coc.preferences.formatOnSaveFiletypes": ["rust", "go", "javascript"],
 	"languageserver": {
 		"flow": {
