vim: Fix coc settings
 * Display by ALE
 * Use code lens

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,6 +1,8 @@
 {
-	"coc.preferences.diagnostic.displayByAle": true,
-	"coc.preferences.formatOnSaveFiletypes": ["rust", "go", "javascript"],
+	"coc.preferences.formatOnSaveFiletypes": ["rust", "javascript"],
+	"diagnostic.displayByAle": true,
+	"suggest.minTriggerInputLength": 3,
+	"codeLens.enable": true,
 	"languageserver": {
 		"flow": {
 			"command": "flow",
