vim: Configure terraform

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -26,6 +26,11 @@
 			"args": ["serve"],
 			"filetypes": ["go"],
 			"initializationOptions": {}
+		},
+		"terraform": {
+			"command": "terraform-lsp",
+			"args": [],
+			"filetypes": ["terraform"]
 		}
 	}
 }
