--- a/tmux.conf
+++ b/tmux.conf
@@ -17,21 +17,24 @@ bind '"' choose-tree -w
 set -g status-position top
 set -g status-fg white
 set -g status-bg default
-set -g status-attr default
+set -g status-attr none
 set -g status-left " "
 set -g status-justify left
 set -g status-right " "
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-set -g pane-border-fg "#393939"
-set -g pane-active-border-fg "#797979"
+set -g message-fg cyan
+set -g message-bg brightblack
+set -g message-command-fg cyan
+set -g message-command-bg brightblack
+set -g pane-border-bg black
+set -g pane-border-fg black
+set -g pane-active-border-bg black
+set -g pane-active-border-fg brightblack
+set -g display-panes-colour black
+set -g display-panes-active-colour brightblack
 
 setw -g window-status-format '  #I:#W  '
 setw -g window-status-current-format '  #W  '
-setw -g window-status-fg "#797979"
-setw -g window-status-bg default
-setw -g window-status-attr bold
-setw -g window-status-current-fg "#d6d6d6"
-setw -g window-status-current-bg "#4d5057"
-setw -g window-status-current-attr default
+setw -g window-status-style default
+setw -g window-status-current-style bold
+setw -g window-status-current-fg default
+setw -g window-status-current-bg brightblack
