tmux: Enable true colour

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,8 @@
 set -g prefix 'C-\'
 set -g mouse on
-set -g default-terminal "screen-256color"
 set -g escape-time 20
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 # Key bindings
 bind r source-file ~/.tmux.conf
