vim: Set up diagnostics LSP

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -32,5 +32,10 @@
 			"args": [],
 			"filetypes": ["terraform"]
 		}
+	},
+	"diagnostic-languageserver.filetypes": {
+		"markdown": ["write-good", "markdownlint"],
+		"sh": "shellcheck",
+		"php": "phpcs"
 	}
 }
