--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -9,6 +9,11 @@
 	"diagnostic.warningSign": "•",
 	"diagnostic.infoSign": "•",
 	"rust.clippy_preference": "on",
+	"rust-analyzer.enableCargoWatchOnStartup": "disabled",
+	"go.goplsOptions": {
+		"completeUnimported": true,
+		"usePlaceholders": true
+	},
 	"list.insertMappings": {
 		"<C-v>": "action:vsplit",
 		"<C-s>": "action:split"
