vim: Disable git gutter

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -5,6 +5,7 @@
 	"suggest.minTriggerInputLength": 3,
 	"codeLens.enable": true,
 	"diagnostic.checkCurrentLine": true,
+	"git.enableGutters": false,
 	"diagnostic.errorSign": "•",
 	"diagnostic.warningSign": "•",
 	"diagnostic.infoSign": "•",
