vim: Use write-good linter for freeform text

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -47,6 +47,8 @@
 		}
 	},
 	"diagnostic-languageserver.filetypes": {
+		"pandoc": ["write-good"],
+		"gitcommit": ["write-good"],
 		"markdown": ["write-good", "markdownlint"],
 		"sh": "shellcheck",
 		"php": "phpcs"
