--- a/tmux.conf
+++ b/tmux.conf
@@ -16,26 +16,18 @@ bind '"' choose-tree -w
 
 # Status line
 set -g status-position top
-set -g status-fg white
-set -g status-bg default
-set -g status-attr none
+set -g status-style fg=white,bg=default,none
 set -g status-left " "
 set -g status-justify left
 set -g status-right " "
-set -g message-fg cyan
-set -g message-bg brightblack
-set -g message-command-fg cyan
-set -g message-command-bg brightblack
-set -g pane-border-bg black
-set -g pane-border-fg black
-set -g pane-active-border-bg black
-set -g pane-active-border-fg brightblack
+set -g message-style fg=cyan,bg=brightblack
+set -g message-command-style fg=cyan,bg=brightblack
+set -g pane-border-style bg=black,fg=black
+set -g pane-active-border-style bg=black,fg=brightblack
 set -g display-panes-colour black
 set -g display-panes-active-colour brightblack
 
 setw -g window-status-format '  #I:#W  '
 setw -g window-status-current-format '  #W  '
 setw -g window-status-style default
-setw -g window-status-current-style bold
-setw -g window-status-current-fg default
-setw -g window-status-current-bg brightblack
+setw -g window-status-current-style fg=default,bg=brightblack,bold
