tmux: Fix split bindings
Why are they backward? Vertical splits should create a new vertical
window, now a horizontal one, wtf.

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,8 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 
 # Key bindings
 bind r source-file ~/.tmux.conf
-bind s split-window -h
-bind v split-window -v
+bind v split-window -h
+bind s split-window -v
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
