--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 enabled_layouts tall,*
 
-font_family Iosevka
+font_family Iosevka Fixed
 font_size 12
 
 # https://github.com/dexpota/kitty-themes/blob/master/themes/ayu_mirage.conf
