--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,8 @@ enabled_layouts tall,*
 font_family Iosevka Fixed
 font_size 12
 
+map ctrl+shift+enter new_window_with_cwd
+
 # https://github.com/dexpota/kitty-themes/blob/master/themes/ayu_mirage.conf
 background #212733
 foreground #d9d7ce
