--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,7 @@ font_family Iosevka Fixed
 font_size 12
 
 map ctrl+shift+enter new_window_with_cwd
+map ctrl+shift+z toggle_layout stack
 
 tab_bar_edge top
 tab_bar_style separator
