hm: Use patched Iosevka Term font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
 enabled_layouts tall,*
 scrollback_pager_history_size 100000
 
-font_family Iosevka Term
+font_family IosevkaTerm NFM
 font_size 12
 
 map ctrl+shift+enter new_window_with_cwd
